--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Mehulkumar Shiroya PhD"
-description: "Ph.D Researcher"
+title: "Mehulkumar Shiroya"
+description: "Ph.D"
 image: "Profile_Photo/my_photo.jpeg"
 page-navigation: false
 toc: false
@@ -22,7 +22,7 @@ about:
    #   target: _blank
     - icon: envelope
       text: E-mail
-      href: mailto:mehul0113@gmail.com    
+      href: mailto:mehul0113@gmail.com   
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/mehulkumar-shiroya-3663b360/
@@ -122,4 +122,3 @@ GSI Helmholtz Centre**, and **Goethe University Frankfurt**.
 
 
 <!-- Delete the following section and delete corresponding lines in the yaml part to remove the recent posts -->
-
