--- a/index.qmd
+++ b/index.qmd
@@ -1,120 +1,124 @@
 ---
 title: "Mehulkumar Shiroya"
-description: "Ph.D"
+description: "Ph.D. Researcher | CBM-STS | FAIR (GSI Darmstadt)"
 image: "Profile_Photo/my_photo.jpeg"
 page-navigation: false
 toc: false
-#sidebar: false
 page-layout: full
 
-about:
-  id: hero-heading
-  template: trestles
-  image-width: 70%
-  links:
-    #- icon: sun
-    #  text: Lab
-    #  href: https://github.com/Mehul0111
-   #   target: _blank
-   # - icon: globe
-   #   text: Uprofile
-   #   href: https://baruch.cuny.edu
-   #   target: _blank
-    - icon: envelope
-      text: E-mail
-      href: mailto:mehul0113@gmail.com   
-    - icon: linkedin
-      text: LinkedIn
-      href: https://www.linkedin.com/in/mehulkumar-shiroya-3663b360/
-      target: _blank
-  #  - icon: youtube
-  #    text: YouTube
-   #   href: https://www.youtube.com     
-   #   target: _blank 
-   # - text: "{{< ai orcid >}} ORCID"   # use academic icons, "" are needed, you also need to install the fontawesome extension
-   #   href: https://orcid.org
-   #   target: _blank
-   # - text: "{{< ai clarivate >}} Web of Science"
-   #   href: https://www.webofscience.com  
-    #  target: _blank
-   # - text: "{{< ai scopus >}} Scopus"
-   #   href: https://www.scopus.com
-   #   target: _blank
-   # - text: "{{< ai google-scholar >}} Google Scholar"
-   #   href: https://scholar.google.com
-    #  target: _blank
-#    - text: "{{< ai researchgate >}} Research Gate"
-#      href: https://www.researchgate.net
-#      target: _blank
-
-#listing:   # Comment the listing section and delete corresponding lines in the index.qmd file to remove the recent posts
- # - id: recent-posts
- #   contents: 
- #     - posts
- #     - posts/post-links.yml
-  #E  exclude:
-  #    title: ""
-   # type: grid
-   # max-items: 3
-#    image-height: 150px
-   # page-size: 3 #set same as max-times to remove the page number setting
-   # fields: [image, date, title, subtitle]
-   # max-description-length: 75
-   # sort: 
-   #   - "date desc"
-   #   - "title asc"
+format:
+  html:
+    theme: cosmo
+    css: newstyles.css
+    smooth-scroll: true
 ---
 
-:::{#hero-heading}
+<!-- ============= HERO: split layout like screenshot ============= -->
+<section class="hero-split" id="hero-split">
+  <div class="hero-wrap">
 
+    <!-- LEFT CARD -->
+    <aside class="hero-left">
+      <div class="hero-card">
 
+        <div class="hero-photo">
+          <img src="Profile_Photo/my_photo.jpeg" alt="Mehulkumar Shiroya">
+        </div>
 
-### Profile
+        <div class="hero-name">Mehulkumar Shiroya</div>
 
-Currently, I am working on the silicon microstrip detector for the Compressed Baryonic Matter(CBM) experiment. 
-My work involves the optical inspection of the silicon sensor and the characterization of the sensor. 
-Further, I am doing the image processing of the silicon sensor which helps us to know and locate defects on sensor's surface such as implant break, open passivation, dust, damaged ac/dc pad etc.
+        <div class="hero-role">
+          Ph.D. Researcher<br>
+          CBM-STS (Silicon Tracking System)
+        </div>
 
+        <div class="hero-inst">
+          FAIR / GSI Darmstadt, Germany
+        </div>
 
-### Research & Data Analytics Expertise
+        <div class="hero-icons">
+          <a class="ico" href="mailto:mehul0113@gmail.com" aria-label="Email" title="Email">
+            <i class="bi bi-envelope-fill"></i>
+          </a>
+          <a class="ico" href="publications.qmd" aria-label="Publications" title="Publications">
+            <i class="bi bi-mortarboard-fill"></i>
+          </a>
+          <a class="ico" href="https://www.linkedin.com/in/mehulkumar-shiroya-3663b360/" target="_blank" aria-label="LinkedIn" title="LinkedIn">
+            <i class="bi bi-linkedin"></i>
+          </a>
+          <a class="ico" href="https://github.com/Mehul0111" target="_blank" aria-label="GitHub" title="GitHub">
+            <i class="bi bi-github"></i>
+          </a>
+        </div>
 
-- Data analysis, exploratory statistics, and modeling using **Python** (pandas, NumPy, SciPy) and ROOT  
-- Querying and analyzing structured datasets using **SQL**  
-- Data cleaning, transformation, and validation across heterogeneous data sources  
-- Scientific software development in **C++ and Python**  
-- Reproducible workflows, **CMake-based builds**, CI/CD, and automated testing  
-- Data visualization and reporting for clear technical and non-technical communication
+      </div>
+    </aside>
 
-### Software Skills
+    <!-- RIGHT CONTENT -->
+    <main class="hero-right">
+      <h1 class="hero-title">About me</h1>
 
-- **C++** 
-- **Python** 
-- **CERN-ROOT** 
-- **GEANT4** 
-- **Git** 
+      <p>
+        Currently, I am working on silicon microstrip detector studies for the
+        <strong>Compressed Baryonic Matter (CBM)</strong> experiment at FAIR (GSI Darmstadt).
+        My work includes <strong>optical inspection</strong> and <strong>sensor characterisation</strong>,
+        and <strong>image-processing</strong> methods to identify and localize surface defects
+        such as implant breaks, open passivation, dust contamination, and damaged AC/DC pads.
+      </p>
 
-### Operating System
-- **Linux** 
-- **Windows**
+      <p>
+        In parallel, I develop analysis workflows for large simulation and experimental datasets
+        using <strong>ROOT/C++</strong> and <strong>Python</strong>, focusing on reproducibility,
+        validation, and physics-driven statistical analysis.
+      </p>
 
+      <div class="hero-cta">
+        <a class="btnx btn-outline" href="My_CV/CV_M_Shiroya.pdf">CV (PDF)</a>
+        <a class="btnx btn-outline" href="projects.qmd">Projects</a>
+        <a class="btnx btn-outline" href="contact.qmd">Contact</a>
+      </div>
+    </main>
 
-### What I Work On
+  </div>
+</section>
 
-- Designing reliable data analysis pipelines for large and complex datasets  
-- Validating simulations and experimental data through statistical analysis  
-- Building maintainable scientific software used by distributed research teams  
-- Applying physics-informed data analysis techniques to real-world problems
+<!-- ============= EDUCATION ============= -->
+<section class="split-section split-dark">
+  <div class="split-wrap">
+    <div class="split-title">
+      <h2>Education</h2>
+    </div>
 
+    <div class="split-body">
 
+      <div class="timeline">
+        <div class="t-item">
+          <div class="t-years">2021–Now</div>
+          <div class="t-content">
+            <strong>Ph.D. in Physics</strong><br>
+            FAIR / GSI Darmstadt (CBM Collaboration) — Silicon Tracking System (STS), detector studies & data analysis
+          </div>
+        </div>
 
-### Get Started
+        <div class="t-item">
+          <div class="t-years">2019–2021</div>
+          <div class="t-content">
+            <strong>M.Sc. in Physics</strong><br>
+            (Add your university) — (Add focus / thesis topic)
+          </div>
+        </div>
 
-- **Curriculum Vitae:** [PDF](My_CV/CV_M_Shiroya.pdf)  
-- **Publications:** [Complete list](publications.qmd) | [Selected papers](posts.qmd#category=paper)  
-- **GitHub:** [https://github.com/Mehul0111](https://github.com/Mehul0111)  
-- **Contact:** [Get in touch](contact.qmd)
+        <div class="t-item">
+          <div class="t-years">2016–2019</div>
+          <div class="t-content">
+            <strong>B.Sc. in Physics</strong><br>
+            (Add your university)
+          </div>
+        </div>
+      </div>
 
-:::
+    </div>
+  </div>
+</section>
 
-
-<!-- Delete the following section and delete corresponding lines in the yaml part to remove the recent posts -->
+<!-- Optional: You can add more sections later using the same split-section pattern -->
