--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Mehulkumar Shiroya PhD"
-description: "Ph.D Researcher"
+title: "Mehulkumar Shiroya"
+description: "**Ph.D Student**"
 image: "Profile_Photo/my_photo.jpeg"
 page-navigation: false
 toc: false
@@ -69,47 +69,65 @@ about:
 
 
 
-### Profile
+<div class="grid-boxes">
 
-Currently, I am working on the silicon microstrip detector for the Compressed Baryonic Matter(CBM) experiment. 
-My work involves the optical inspection of the silicon sensor and the characterization of the sensor. 
-Further, I am doing the image processing of the silicon sensor which helps us to know and locate defects on sensor's surface such as implant break, open passivation, dust, damaged ac/dc pad etc.
+  <div class="box box-profile" data-bs-toggle="collapse" data-bs-target="#boxProfile" role="button" aria-expanded="true">
+    <div class="box-title">Profile</div>
+    <div class="box-subtitle">CBM-STS · Silicon sensor inspection · Image processing</div>
+  </div>
 
-I specialize in transforming complex datasets into **reliable, actionable insights** through
-well-engineered workflows, developed within international collaborations such as **CBM/FAIR,
-GSI Helmholtz Centre**, and **Goethe University Frankfurt**.
+  <div class="box box-edu" data-bs-toggle="collapse" data-bs-target="#boxEdu" role="button" aria-expanded="false">
+    <div class="box-title">Education</div>
+    <div class="box-subtitle">Ph.D · M.Sc · B.Sc</div>
+  </div>
 
+  <div class="box box-soft" data-bs-toggle="collapse" data-bs-target="#boxSoft" role="button" aria-expanded="false">
+    <div class="box-title">Software Skills</div>
+    <div class="box-subtitle">C++ · Python · ROOT · GEANT4 · Git</div>
+  </div>
 
-### Research & Data Analytics Expertise
+</div>
 
-- Data analysis, exploratory statistics, and modeling using **Python** (pandas, NumPy, SciPy) and ROOT  
-- Querying and analyzing structured datasets using **SQL**  
-- Data cleaning, transformation, and validation across heterogeneous data sources  
-- Scientific software development in **C++ and Python**  
-- Reproducible workflows, **CMake-based builds**, CI/CD, and automated testing  
-- Data visualization and reporting for clear technical and non-technical communication
+<div class="box-panels">
 
-### Software Skills
+  <div id="boxProfile" class="collapse show panel">
+    <h3>Profile</h3>
+    <p>
+      Currently, I am working on the silicon microstrip detector for the Compressed Baryonic Matter (CBM) experiment.
+      My work involves optical inspection and characterization of silicon sensors. I also develop image-processing
+      methods to locate defects such as implant breaks, open passivation, dust contamination, and damaged AC/DC pads.
+    </p>
+    <p>
+      I specialize in transforming complex datasets into <strong>reliable, actionable insights</strong> through
+      reproducible workflows developed within international collaborations such as <strong>CBM/FAIR</strong>,
+      <strong>GSI Helmholtz Centre</strong>, and <strong>Goethe University Frankfurt</strong>.
+    </p>
+  </div>
 
-- **C++** 
-- **Python** 
-- **CERN-ROOT** 
-- **GEANT4** 
-- **Git** 
+  <div id="boxEdu" class="collapse panel">
+    <h3>Education</h3>
+    <ul>
+      <li><strong>2021–Now</strong> — Ph.D. in Physics, FAIR / GSI Darmstadt (CBM Collaboration)</li>
+      <li><strong>2019–2021</strong> — M.Sc. in Physics, (your university)</li>
+      <li><strong>2016–2019</strong> — B.Sc. in Physics, (your university)</li>
+    </ul>
+  </div>
 
-### Operating System
-- **Linux** 
-- **Windows**
+  <div id="boxSoft" class="collapse panel">
+    <h3>Software Skills</h3>
+    <ul>
+      <li><strong>C++</strong>, Scientific software development</li>
+      <li><strong>Python</strong> (pandas, NumPy, SciPy)</li>
+      <li><strong>CERN ROOT</strong></li>
+      <li><strong>GEANT4</strong></li>
+      <li><strong>Git</strong>, reproducible workflows</li>
+      <li><strong>Linux / Windows</strong></li>
+    </ul>
 
+    <p><strong>Tech stack:</strong> Python · SQL · C++ · Git · Linux · ROOT · CMake · CI/CD</p>
+  </div>
 
-### What I Work On
-
-- Designing reliable data analysis pipelines for large and complex datasets  
-- Validating simulations and experimental data through statistical analysis  
-- Building maintainable scientific software used by distributed research teams  
-- Applying physics-informed data analysis techniques to real-world problems
-
-**Tech stack:** Python · SQL · C++ · Git · Linux · ROOT · CMake · CI/CD
+</div>
 
 ### Get Started
 
