--- a/index.qmd
+++ b/index.qmd
@@ -4,77 +4,80 @@ description: "**Ph.D Student**"
 page-layout: full
 toc: false
 page-navigation: false
-
-about:
-  id: hero-heading
-  template: trestles
-  image: "Profile_Photo/my_photo.jpeg"
-  image-width: 70%
-  links:
-    - icon: envelope
-      text: E-mail
-      href: mailto:mehul0113@gmail.com
-    - icon: linkedin
-      text: LinkedIn
-      href: https://www.linkedin.com/in/mehulkumar-shiroya-3663b360/
-      target: _blank
-    - icon: github
-      text: GitHub
-      href: https://github.com/Mehul0111
-      target: _blank
 ---
 
 ```{=html}
-<div class="grid-boxes">
+<section class="hero-center">
 
-::: {.box .box-profile}
-<details open>
-<summary>
-<div class="box-title">Profile</div>
-<div class="box-subtitle">CBM-STS · Silicon sensor inspection · Image processing</div>
-</summary>
+  <div class="hero-photo">
+    <img src="Profile_Photo/my_photo.jpeg" alt="Mehulkumar Shiroya">
+  </div>
 
-Currently, I am working on the silicon microstrip detector for the **Compressed Baryonic Matter (CBM)** experiment.  
-My work involves optical inspection and characterization of silicon sensors. I also develop image-processing
-methods to locate defects such as implant breaks, open passivation, dust contamination, and damaged AC/DC pads.
+  <h1 class="hero-name">Mehulkumar Shiroya</h1>
+  <div class="hero-role">Ph.D Student</div>
 
-I specialize in transforming complex datasets into **reliable, actionable insights** through reproducible workflows
-developed within international collaborations such as **CBM/FAIR**, **GSI Helmholtz Centre**, and **Goethe University Frankfurt**.
+  <div class="hero-btns">
+    <a class="hbtn" href="mailto:mehul0113@gmail.com">E-mail</a>
+    <a class="hbtn" href="https://www.linkedin.com/in/mehulkumar-shiroya-3663b360/" target="_blank">LinkedIn</a>
+    <a class="hbtn" href="https://github.com/Mehul0111" target="_blank">GitHub</a>
+  </div>
 
-</details>
-:::
+</section>
 
-::: {.box .box-edu}
-<details>
-<summary>
-<div class="box-title">Education</div>
-<div class="box-subtitle">Ph.D · M.Sc · B.Sc</div>
-</summary>
+<section class="stack-panels">
 
-- **2021–Now** — Ph.D. in Physics, FAIR / GSI Darmstadt (CBM Collaboration)  
-- **2019–2021** — M.Sc. in Physics, *(your university)*  
-- **2016–2019** — B.Sc. in Physics, *(your university)*  
+  <details class="hpanel hp-profile" open>
+    <summary>
+      <div class="hp-title">Profile</div>
+      <div class="hp-sub">CBM-STS · Silicon sensor inspection · Image processing</div>
+    </summary>
 
-</details>
-:::
+    <div class="hp-body">
+      <p>
+        Currently, I am working on the silicon microstrip detector for the <strong>Compressed Baryonic Matter (CBM)</strong> experiment.
+        My work involves optical inspection and characterization of silicon sensors. I also develop image-processing methods to locate defects
+        such as implant breaks, open passivation, dust contamination, and damaged AC/DC pads.
+      </p>
+      <p>
+        I specialize in transforming complex datasets into <strong>reliable, actionable insights</strong> through reproducible workflows developed
+        within international collaborations such as <strong>CBM/FAIR</strong>, <strong>GSI Helmholtz Centre</strong>, and
+        <strong>Goethe University Frankfurt</strong>.
+      </p>
+    </div>
+  </details>
 
-::: {.box .box-soft}
-<details>
-<summary>
-<div class="box-title">Software Skills</div>
-<div class="box-subtitle">C++ · Python · ROOT · GEANT4 · Git</div>
-</summary>
+  <details class="hpanel hp-edu">
+    <summary>
+      <div class="hp-title">Education</div>
+      <div class="hp-sub">Ph.D · M.Sc · B.Sc</div>
+    </summary>
 
-- **C++** — scientific software development  
-- **Python** — pandas, NumPy, SciPy  
-- **CERN ROOT**  
-- **GEANT4**  
-- **Git** — reproducible workflows  
-- **Linux / Windows**
+    <div class="hp-body">
+      <ul>
+        <li><strong>2021–Now</strong> — Ph.D. in Physics, FAIR / GSI Darmstadt (CBM Collaboration)</li>
+        <li><strong>2019–2021</strong> — M.Sc. in Physics, (your university)</li>
+        <li><strong>2016–2019</strong> — B.Sc. in Physics, (your university)</li>
+      </ul>
+    </div>
+  </details>
 
-**Tech stack:** Python · SQL · C++ · Git · Linux · ROOT · CMake · CI/CD
+  <details class="hpanel hp-soft">
+    <summary>
+      <div class="hp-title">Software Skills</div>
+      <div class="hp-sub">C++ · Python · ROOT · GEANT4 · Git</div>
+    </summary>
 
-</details>
-:::
+    <div class="hp-body">
+      <ul>
+        <li><strong>C++</strong> — scientific software development</li>
+        <li><strong>Python</strong> — pandas, NumPy, SciPy</li>
+        <li><strong>CERN ROOT</strong></li>
+        <li><strong>GEANT4</strong></li>
+        <li><strong>Git</strong> — reproducible workflows</li>
+        <li><strong>Linux / Windows</strong></li>
+      </ul>
+      <p><strong>Tech stack:</strong> Python · SQL · C++ · Git · Linux · ROOT · CMake · CI/CD</p>
+    </div>
+  </details>
 
-</div>
+</section>
